--- a/taskpane.html
+++ b/taskpane.html
@@ -31,7 +31,7 @@
 </head>
 
 <body class="ms-font-m ms-Fabric">
-    <div id="container"></div>
+    <div id="container" class="container"></div>
 <script type="text/javascript" src="vendor.js"></script><script type="text/javascript" src="taskpane.js"></script></body>
 
 </html>
